# DataEnvironment

./: README.md
forex_bot/: .env.example  .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
forex_bot/forex/: README.md  __init__.py  api.py  cli.py  config.py  logging_config.py
forex_bot/forex/backtest/: README.md  engine.py  metrics.py  reports.py
forex_bot/forex/broker/: README.md  base.py  oanda.py  paper_sim.py
forex_bot/forex/data/: README.md  candles_store.py  models.py  run_store.py
forex_bot/forex/execution/: README.md  executor.py  risk.py
forex_bot/forex/fundamentals/: filter.py
forex_bot/forex/realtime/: README.md  __init__.py  bus.py  live.py  session.py
forex_bot/forex/strategy/: README.md  base.py  murphy_candles.py  registry.py  rsi_mean_revert.py  sma_crossover.py
forex_bot/forex/ta/: indicators.py  patterns.py
forex_bot/forex/utils/: README.md  math.py  (+2 more)
forex_bot/forex_app/: __init__.py  broker.py  data.py  engine.py  event_bus.py  logging.py  main.py  metrics.py  models.py  news.py  risk.py  rl_agent.py  rl_env.py  routes.py  settings.py
forex_bot/forex_bot/: __init__.py  main.py
forex_bot/frontend/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json
forex_bot/scripts/: README.md  dev_backend.sh
forex_bot/tests/: README.md  test_api.py  test_backtest_engine.py  test_broker_oanda.py  test_engine_gating.py  test_indicators.py  test_math.py  test_patterns.py  test_risk.py  test_session_controller.py  test_strategy_rsi.py  test_strategy_sma.py
(+38 files in other folders)
