[tool.poetry]
name = "forex-bot"
version = "0.1.0"
description = "Modular paper-trading forex application"
authors = ["AI Engineer <ai@example.com>"]
readme = "README.md"
packages = [{ include = "forex" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = { version = "^0.12.3", extras = ["all"] }
pydantic-settings = "^2.2.1"
pendulum = "^3.0.0"
httpx = { version = "^0.27.0", extras = ["http2"] }
tenacity = "^8.2.3"
sqlalchemy = "^2.0.29"
pandas = "^2.2.2"
numpy = "^1.26.4"
python-json-logger = "^2.0.7"
python-dateutil = "^2.9.0"
tomli = { version = "^2.0.1", python = "<3.11" }
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
freezegun = "^1.4.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
ruff = "^0.5.5"
mypy = "^1.10.0"
coverage = "^7.5.0"

[tool.poetry.scripts]
forex = "forex.cli:app"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "ANN", "S", "W", "RUF"]
ignore = ["ANN101", "ANN102", "ANN204", "S101"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
strict_optional = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
